src/parser/y.output
   0  $accept : input $end

   1  input :
   2        | programa
   3        | programa error

   4  inicio_programa : ID

   5  programa : inicio_programa LBRACE lista_sentencias RBRACE
   6           | error LBRACE lista_sentencias RBRACE
   7           | inicio_programa LBRACE lista_sentencias error
   8           | inicio_programa lista_sentencias error

   9  lista_sentencias :
  10                   | lista_sentencias sentencia_declarativa
  11                   | lista_sentencias sentencia_ejecutable
  12                   | lista_sentencias error SEMICOLON

  13  lista_sentencias_sin_return :
  14                              | lista_sentencias_sin_return sentencia_declarativa
  15                              | lista_sentencias_sin_return sentencia_ejecutable_sin_return
  16                              | lista_sentencias_sin_return error SEMICOLON

  17  sentencia_declarativa : declaracion_funcion
  18                        | declaracion_variable

  19  declaracion_variable : VAR lista_variables SEMICOLON
  20                       | VAR SEMICOLON
  21                       | VAR error SEMICOLON

  22  identificador_completo : ID
  23                         | identificador_completo POINT ID

  24  lista_variables : identificador_completo
  25                  | lista_variables COMMA identificador_completo
  26                  | lista_variables error identificador_completo

  27  identificador_destino : identificador_completo

  28  lista_variables_destino : identificador_destino
  29                          | lista_variables_destino COMMA identificador_destino

  30  inicio_funcion : lista_tipos ID

  31  declaracion_funcion : inicio_funcion LPAREN parametros_formales RPAREN LBRACE lista_sentencias_sin_return sentencia_return lista_sentencias RBRACE
  32                      | inicio_funcion error LPAREN parametros_formales RPAREN LBRACE lista_sentencias_sin_return sentencia_return lista_sentencias RBRACE
  33                      | inicio_funcion LPAREN error RPAREN LBRACE lista_sentencias_sin_return sentencia_return lista_sentencias RBRACE
  34                      | inicio_funcion LPAREN parametros_formales RPAREN error lista_sentencias_sin_return sentencia_return lista_sentencias RBRACE
  35                      | lista_tipos LPAREN parametros_formales RPAREN LBRACE lista_sentencias_sin_return sentencia_return lista_sentencias error
  36                      | inicio_funcion LPAREN parametros_formales error LBRACE lista_sentencias_sin_return sentencia_return lista_sentencias RBRACE

  37  lista_tipos : tipo
  38              | lista_tipos COMMA tipo
  39              | lista_tipos tipo

  40  tipo : INT_KW
  41       | FLOAT_KW

  42  parametros_formales : parametro_formal
  43                      | parametros_formales error parametro_formal
  44                      | parametros_formales COMMA parametro_formal

  45  parametro_formal : tipo ID
  46                   | sem_pasaje tipo ID
  47                   | sem_pasaje ID
  48                   | ID

  49  sem_pasaje : CV LE_KW
  50             | CR LE_KW
  51             | CV error
  52             | CR error

  53  sentencia_return : RETURN LPAREN lista_expresiones RPAREN SEMICOLON

  54  sentencia_ejecutable : asignacion SEMICOLON
  55                       | sentencia_return
  56                       | sentencia_print SEMICOLON
  57                       | sentencia_if
  58                       | sentencia_for
  59                       | lambda_expresion

  60  sentencia_ejecutable_sin_return : asignacion SEMICOLON
  61                                  | sentencia_print SEMICOLON
  62                                  | sentencia_if
  63                                  | sentencia_for
  64                                  | lambda_expresion

  65  sentencia_print : PRINT LPAREN expresion RPAREN
  66                  | PRINT LPAREN error RPAREN

  67  lista_sentencias_ejecutables :
  68                               | lista_sentencias_ejecutables sentencia_ejecutable
  69                               | lista_sentencias_ejecutables error SEMICOLON

  70  bloque_sentencias_ejecutables : LBRACE lista_sentencias_ejecutables RBRACE

  71  resto_if : ENDIF SEMICOLON

  72  $$1 :

  73  resto_if : ELSE $$1 bloque_sentencias_ejecutables ENDIF SEMICOLON
  74           | error

  75  $$2 :

  76  sentencia_if : IF LPAREN condicion RPAREN $$2 bloque_sentencias_ejecutables resto_if
  77               | IF error condicion RPAREN bloque_sentencias_ejecutables resto_if
  78               | IF LPAREN condicion error bloque_sentencias_ejecutables resto_if
  79               | IF LPAREN condicion RPAREN error resto_if

  80  if_simple : IF LPAREN condicion RPAREN sentencia_ejecutable

  81  encabezado_for : FOR LPAREN identificador_destino FROM factor TO factor RPAREN

  82  sentencia_for : encabezado_for LBRACE lista_sentencias_ejecutables RBRACE SEMICOLON
  83                | FOR error identificador_destino FROM factor TO factor RPAREN bloque_sentencias_ejecutables SEMICOLON
  84                | FOR LPAREN error FROM factor TO factor RPAREN bloque_sentencias_ejecutables SEMICOLON
  85                | FOR LPAREN identificador_destino error factor TO factor RPAREN bloque_sentencias_ejecutables SEMICOLON
  86                | FOR LPAREN identificador_destino FROM error TO factor RPAREN bloque_sentencias_ejecutables SEMICOLON
  87                | FOR LPAREN identificador_destino FROM factor error factor RPAREN bloque_sentencias_ejecutables SEMICOLON
  88                | FOR LPAREN identificador_destino FROM factor TO error RPAREN bloque_sentencias_ejecutables SEMICOLON
  89                | FOR LPAREN identificador_destino FROM factor TO factor error bloque_sentencias_ejecutables SEMICOLON
  90                | FOR error SEMICOLON

  91  condicion : expresion operador_comparacion expresion
  92            | expresion expresion
  93            | error operador_comparacion expresion
  94            | expresion operador_comparacion error

  95  operador_comparacion : EQ
  96                       | NEQ
  97                       | LT
  98                       | LE_OP
  99                       | GT
 100                       | GE

 101  asignacion : identificador_destino ASSIGN_COLON expresion
 102             | lista_variables_destino ASSIGN lista_expresiones

 103  lista_expresiones : expresion
 104                    | lista_expresiones COMMA expresion
 105                    | lista_expresiones error expresion

 106  expresion : termino
 107            | expresion PLUS termino
 108            | expresion PLUS error
 109            | expresion MINUS termino
 110            | expresion MINUS error

 111  termino : factor
 112          | termino STAR factor
 113          | termino STAR error
 114          | termino SLASH factor
 115          | termino SLASH error

 116  factor : identificador_completo
 117         | INT16
 118         | FLOAT32
 119         | STRING
 120         | invocacion_funcion
 121         | conversion_tof

 122  invocacion_funcion : ID LPAREN parametros_reales RPAREN

 123  conversion_tof : TOF LPAREN expresion RPAREN
 124                 | TOF error expresion RPAREN
 125                 | TOF LPAREN expresion error

 126  parametros_reales : parametro_real
 127                    | parametros_reales COMMA parametro_real

 128  parametro_real : expresion ARROW ID
 129                 | expresion error

 130  lambda_prefix : LPAREN tipo ID RPAREN

 131  lambda_expresion : lambda_prefix LBRACE if_simple RBRACE LPAREN lambda_argumento RPAREN
 132                   | lambda_prefix error if_simple RBRACE LPAREN lambda_argumento RPAREN
 133                   | lambda_prefix LBRACE if_simple error LPAREN lambda_argumento RPAREN
 134                   | lambda_prefix LBRACE if_simple RBRACE LPAREN lambda_argumento error

 135  lambda_argumento : ID
 136                   | INT16
 137                   | FLOAT32

state 0
	$accept : . input $end  (0)
	input : .  (1)

	error  shift 1
	ID  shift 2
	$end  reduce 1

	input  goto 3
	inicio_programa  goto 4
	programa  goto 5


state 1
	programa : error . LBRACE lista_sentencias RBRACE  (6)

	LBRACE  shift 6
	.  error


state 2
	inicio_programa : ID .  (4)

	.  reduce 4


state 3
	$accept : input . $end  (0)

	$end  accept


state 4
	programa : inicio_programa . LBRACE lista_sentencias RBRACE  (5)
	programa : inicio_programa . LBRACE lista_sentencias error  (7)
	programa : inicio_programa . lista_sentencias error  (8)
	lista_sentencias : .  (9)

	LBRACE  shift 7
	error  reduce 9
	ID  reduce 9
	IF  reduce 9
	PRINT  reduce 9
	RETURN  reduce 9
	VAR  reduce 9
	FOR  reduce 9
	LPAREN  reduce 9
	INT_KW  reduce 9
	FLOAT_KW  reduce 9

	lista_sentencias  goto 8


state 5
	input : programa .  (2)
	input : programa . error  (3)

	error  shift 9
	$end  reduce 2


state 6
	programa : error LBRACE . lista_sentencias RBRACE  (6)
	lista_sentencias : .  (9)

	.  reduce 9

	lista_sentencias  goto 10


state 7
	programa : inicio_programa LBRACE . lista_sentencias RBRACE  (5)
	programa : inicio_programa LBRACE . lista_sentencias error  (7)
	lista_sentencias : .  (9)

	.  reduce 9

	lista_sentencias  goto 11


state 8
	programa : inicio_programa lista_sentencias . error  (8)
	lista_sentencias : lista_sentencias . sentencia_declarativa  (10)
	lista_sentencias : lista_sentencias . sentencia_ejecutable  (11)
	lista_sentencias : lista_sentencias . error SEMICOLON  (12)

	error  shift 12
	ID  shift 13
	IF  shift 14
	PRINT  shift 15
	RETURN  shift 16
	VAR  shift 17
	FOR  shift 18
	LPAREN  shift 19
	INT_KW  shift 20
	FLOAT_KW  shift 21
	.  error

	encabezado_for  goto 22
	lambda_expresion  goto 23
	identificador_completo  goto 24
	identificador_destino  goto 25
	inicio_funcion  goto 26
	tipo  goto 27
	lista_variables_destino  goto 28
	lista_tipos  goto 29
	lambda_prefix  goto 30
	sentencia_declarativa  goto 31
	sentencia_ejecutable  goto 32
	declaracion_funcion  goto 33
	declaracion_variable  goto 34
	sentencia_return  goto 35
	asignacion  goto 36
	sentencia_print  goto 37
	sentencia_if  goto 38
	sentencia_for  goto 39


state 9
	input : programa error .  (3)

	.  reduce 3


state 10
	programa : error LBRACE lista_sentencias . RBRACE  (6)
	lista_sentencias : lista_sentencias . sentencia_declarativa  (10)
	lista_sentencias : lista_sentencias . sentencia_ejecutable  (11)
	lista_sentencias : lista_sentencias . error SEMICOLON  (12)

	error  shift 40
	ID  shift 13
	IF  shift 14
	PRINT  shift 15
	RETURN  shift 16
	VAR  shift 17
	FOR  shift 18
	LPAREN  shift 19
	RBRACE  shift 41
	INT_KW  shift 20
	FLOAT_KW  shift 21
	.  error

	encabezado_for  goto 22
	lambda_expresion  goto 23
	identificador_completo  goto 24
	identificador_destino  goto 25
	inicio_funcion  goto 26
	tipo  goto 27
	lista_variables_destino  goto 28
	lista_tipos  goto 29
	lambda_prefix  goto 30
	sentencia_declarativa  goto 31
	sentencia_ejecutable  goto 32
	declaracion_funcion  goto 33
	declaracion_variable  goto 34
	sentencia_return  goto 35
	asignacion  goto 36
	sentencia_print  goto 37
	sentencia_if  goto 38
	sentencia_for  goto 39


state 11
	programa : inicio_programa LBRACE lista_sentencias . RBRACE  (5)
	programa : inicio_programa LBRACE lista_sentencias . error  (7)
	lista_sentencias : lista_sentencias . sentencia_declarativa  (10)
	lista_sentencias : lista_sentencias . sentencia_ejecutable  (11)
	lista_sentencias : lista_sentencias . error SEMICOLON  (12)

	error  shift 42
	ID  shift 13
	IF  shift 14
	PRINT  shift 15
	RETURN  shift 16
	VAR  shift 17
	FOR  shift 18
	LPAREN  shift 19
	RBRACE  shift 43
	INT_KW  shift 20
	FLOAT_KW  shift 21
	.  error

	encabezado_for  goto 22
	lambda_expresion  goto 23
	identificador_completo  goto 24
	identificador_destino  goto 25
	inicio_funcion  goto 26
	tipo  goto 27
	lista_variables_destino  goto 28
	lista_tipos  goto 29
	lambda_prefix  goto 30
	sentencia_declarativa  goto 31
	sentencia_ejecutable  goto 32
	declaracion_funcion  goto 33
	declaracion_variable  goto 34
	sentencia_return  goto 35
	asignacion  goto 36
	sentencia_print  goto 37
	sentencia_if  goto 38
	sentencia_for  goto 39


state 12
	programa : inicio_programa lista_sentencias error .  (8)
	lista_sentencias : lista_sentencias error . SEMICOLON  (12)

	SEMICOLON  shift 44
	$end  reduce 8
	error  reduce 8


state 13
	identificador_completo : ID .  (22)

	.  reduce 22


state 14
	sentencia_if : IF . LPAREN condicion RPAREN $$2 bloque_sentencias_ejecutables resto_if  (76)
	sentencia_if : IF . error condicion RPAREN bloque_sentencias_ejecutables resto_if  (77)
	sentencia_if : IF . LPAREN condicion error bloque_sentencias_ejecutables resto_if  (78)
	sentencia_if : IF . LPAREN condicion RPAREN error resto_if  (79)

	error  shift 45
	LPAREN  shift 46
	.  error


state 15
	sentencia_print : PRINT . LPAREN expresion RPAREN  (65)
	sentencia_print : PRINT . LPAREN error RPAREN  (66)

	LPAREN  shift 47
	.  error


state 16
	sentencia_return : RETURN . LPAREN lista_expresiones RPAREN SEMICOLON  (53)

	LPAREN  shift 48
	.  error


state 17
	declaracion_variable : VAR . lista_variables SEMICOLON  (19)
	declaracion_variable : VAR . SEMICOLON  (20)
	declaracion_variable : VAR . error SEMICOLON  (21)

	error  shift 49
	ID  shift 13
	SEMICOLON  shift 50
	.  error

	identificador_completo  goto 51
	lista_variables  goto 52


state 18
	encabezado_for : FOR . LPAREN identificador_destino FROM factor TO factor RPAREN  (81)
	sentencia_for : FOR . error identificador_destino FROM factor TO factor RPAREN bloque_sentencias_ejecutables SEMICOLON  (83)
	sentencia_for : FOR . LPAREN error FROM factor TO factor RPAREN bloque_sentencias_ejecutables SEMICOLON  (84)
	sentencia_for : FOR . LPAREN identificador_destino error factor TO factor RPAREN bloque_sentencias_ejecutables SEMICOLON  (85)
	sentencia_for : FOR . LPAREN identificador_destino FROM error TO factor RPAREN bloque_sentencias_ejecutables SEMICOLON  (86)
	sentencia_for : FOR . LPAREN identificador_destino FROM factor error factor RPAREN bloque_sentencias_ejecutables SEMICOLON  (87)
	sentencia_for : FOR . LPAREN identificador_destino FROM factor TO error RPAREN bloque_sentencias_ejecutables SEMICOLON  (88)
	sentencia_for : FOR . LPAREN identificador_destino FROM factor TO factor error bloque_sentencias_ejecutables SEMICOLON  (89)
	sentencia_for : FOR . error SEMICOLON  (90)

	error  shift 53
	LPAREN  shift 54
	.  error


state 19
	lambda_prefix : LPAREN . tipo ID RPAREN  (130)

	INT_KW  shift 20
	FLOAT_KW  shift 21
	.  error

	tipo  goto 55


state 20
	tipo : INT_KW .  (40)

	.  reduce 40


state 21
	tipo : FLOAT_KW .  (41)

	.  reduce 41


state 22
	sentencia_for : encabezado_for . LBRACE lista_sentencias_ejecutables RBRACE SEMICOLON  (82)

	LBRACE  shift 56
	.  error


state 23
	sentencia_ejecutable : lambda_expresion .  (59)

	.  reduce 59


state 24
	identificador_completo : identificador_completo . POINT ID  (23)
	identificador_destino : identificador_completo .  (27)

	POINT  shift 57
	error  reduce 27
	FROM  reduce 27
	ASSIGN  reduce 27
	ASSIGN_COLON  reduce 27
	COMMA  reduce 27


state 25
	lista_variables_destino : identificador_destino .  (28)
	asignacion : identificador_destino . ASSIGN_COLON expresion  (101)

	ASSIGN_COLON  shift 58
	ASSIGN  reduce 28
	COMMA  reduce 28


state 26
	declaracion_funcion : inicio_funcion . LPAREN parametros_formales RPAREN LBRACE lista_sentencias_sin_return sentencia_return lista_sentencias RBRACE  (31)
	declaracion_funcion : inicio_funcion . error LPAREN parametros_formales RPAREN LBRACE lista_sentencias_sin_return sentencia_return lista_sentencias RBRACE  (32)
	declaracion_funcion : inicio_funcion . LPAREN error RPAREN LBRACE lista_sentencias_sin_return sentencia_return lista_sentencias RBRACE  (33)
	declaracion_funcion : inicio_funcion . LPAREN parametros_formales RPAREN error lista_sentencias_sin_return sentencia_return lista_sentencias RBRACE  (34)
	declaracion_funcion : inicio_funcion . LPAREN parametros_formales error LBRACE lista_sentencias_sin_return sentencia_return lista_sentencias RBRACE  (36)

	error  shift 59
	LPAREN  shift 60
	.  error


state 27
	lista_tipos : tipo .  (37)

	.  reduce 37


state 28
	lista_variables_destino : lista_variables_destino . COMMA identificador_destino  (29)
	asignacion : lista_variables_destino . ASSIGN lista_expresiones  (102)

	ASSIGN  shift 61
	COMMA  shift 62
	.  error


state 29
	inicio_funcion : lista_tipos . ID  (30)
	declaracion_funcion : lista_tipos . LPAREN parametros_formales RPAREN LBRACE lista_sentencias_sin_return sentencia_return lista_sentencias error  (35)
	lista_tipos : lista_tipos . COMMA tipo  (38)
	lista_tipos : lista_tipos . tipo  (39)

	ID  shift 63
	LPAREN  shift 64
	COMMA  shift 65
	INT_KW  shift 20
	FLOAT_KW  shift 21
	.  error

	tipo  goto 66


state 30
	lambda_expresion : lambda_prefix . LBRACE if_simple RBRACE LPAREN lambda_argumento RPAREN  (131)
	lambda_expresion : lambda_prefix . error if_simple RBRACE LPAREN lambda_argumento RPAREN  (132)
	lambda_expresion : lambda_prefix . LBRACE if_simple error LPAREN lambda_argumento RPAREN  (133)
	lambda_expresion : lambda_prefix . LBRACE if_simple RBRACE LPAREN lambda_argumento error  (134)

	error  shift 67
	LBRACE  shift 68
	.  error


state 31
	lista_sentencias : lista_sentencias sentencia_declarativa .  (10)

	.  reduce 10


state 32
	lista_sentencias : lista_sentencias sentencia_ejecutable .  (11)

	.  reduce 11


state 33
	sentencia_declarativa : declaracion_funcion .  (17)

	.  reduce 17


state 34
	sentencia_declarativa : declaracion_variable .  (18)

	.  reduce 18


state 35
	sentencia_ejecutable : sentencia_return .  (55)

	.  reduce 55


state 36
	sentencia_ejecutable : asignacion . SEMICOLON  (54)

	SEMICOLON  shift 69
	.  error


state 37
	sentencia_ejecutable : sentencia_print . SEMICOLON  (56)

	SEMICOLON  shift 70
	.  error


state 38
	sentencia_ejecutable : sentencia_if .  (57)

	.  reduce 57


state 39
	sentencia_ejecutable : sentencia_for .  (58)

	.  reduce 58


state 40
	lista_sentencias : lista_sentencias error . SEMICOLON  (12)

	SEMICOLON  shift 44
	.  error


state 41
	programa : error LBRACE lista_sentencias RBRACE .  (6)

	.  reduce 6


state 42
	programa : inicio_programa LBRACE lista_sentencias error .  (7)
	lista_sentencias : lista_sentencias error . SEMICOLON  (12)

	SEMICOLON  shift 44
	$end  reduce 7
	error  reduce 7


state 43
	programa : inicio_programa LBRACE lista_sentencias RBRACE .  (5)

	.  reduce 5


state 44
	lista_sentencias : lista_sentencias error SEMICOLON .  (12)

	.  reduce 12


state 45
	sentencia_if : IF error . condicion RPAREN bloque_sentencias_ejecutables resto_if  (77)

	error  shift 71
	ID  shift 72
	STRING  shift 73
	INT16  shift 74
	FLOAT32  shift 75
	TOF  shift 76
	.  error

	expresion  goto 77
	termino  goto 78
	factor  goto 79
	conversion_tof  goto 80
	invocacion_funcion  goto 81
	condicion  goto 82
	identificador_completo  goto 83


state 46
	sentencia_if : IF LPAREN . condicion RPAREN $$2 bloque_sentencias_ejecutables resto_if  (76)
	sentencia_if : IF LPAREN . condicion error bloque_sentencias_ejecutables resto_if  (78)
	sentencia_if : IF LPAREN . condicion RPAREN error resto_if  (79)

	error  shift 71
	ID  shift 72
	STRING  shift 73
	INT16  shift 74
	FLOAT32  shift 75
	TOF  shift 76
	.  error

	expresion  goto 77
	termino  goto 78
	factor  goto 79
	conversion_tof  goto 80
	invocacion_funcion  goto 81
	condicion  goto 84
	identificador_completo  goto 83


state 47
	sentencia_print : PRINT LPAREN . expresion RPAREN  (65)
	sentencia_print : PRINT LPAREN . error RPAREN  (66)

	error  shift 85
	ID  shift 72
	STRING  shift 73
	INT16  shift 74
	FLOAT32  shift 75
	TOF  shift 76
	.  error

	expresion  goto 86
	termino  goto 78
	factor  goto 79
	conversion_tof  goto 80
	invocacion_funcion  goto 81
	identificador_completo  goto 83


state 48
	sentencia_return : RETURN LPAREN . lista_expresiones RPAREN SEMICOLON  (53)

	ID  shift 72
	STRING  shift 73
	INT16  shift 74
	FLOAT32  shift 75
	TOF  shift 76
	.  error

	expresion  goto 87
	termino  goto 78
	factor  goto 79
	conversion_tof  goto 80
	invocacion_funcion  goto 81
	identificador_completo  goto 83
	lista_expresiones  goto 88


state 49
	declaracion_variable : VAR error . SEMICOLON  (21)

	SEMICOLON  shift 89
	.  error


state 50
	declaracion_variable : VAR SEMICOLON .  (20)

	.  reduce 20


state 51
	identificador_completo : identificador_completo . POINT ID  (23)
	lista_variables : identificador_completo .  (24)

	POINT  shift 57
	error  reduce 24
	SEMICOLON  reduce 24
	COMMA  reduce 24


state 52
	declaracion_variable : VAR lista_variables . SEMICOLON  (19)
	lista_variables : lista_variables . COMMA identificador_completo  (25)
	lista_variables : lista_variables . error identificador_completo  (26)

	error  shift 90
	SEMICOLON  shift 91
	COMMA  shift 92
	.  error


state 53
	sentencia_for : FOR error . identificador_destino FROM factor TO factor RPAREN bloque_sentencias_ejecutables SEMICOLON  (83)
	sentencia_for : FOR error . SEMICOLON  (90)

	ID  shift 13
	SEMICOLON  shift 93
	.  error

	identificador_completo  goto 24
	identificador_destino  goto 94


state 54
	encabezado_for : FOR LPAREN . identificador_destino FROM factor TO factor RPAREN  (81)
	sentencia_for : FOR LPAREN . error FROM factor TO factor RPAREN bloque_sentencias_ejecutables SEMICOLON  (84)
	sentencia_for : FOR LPAREN . identificador_destino error factor TO factor RPAREN bloque_sentencias_ejecutables SEMICOLON  (85)
	sentencia_for : FOR LPAREN . identificador_destino FROM error TO factor RPAREN bloque_sentencias_ejecutables SEMICOLON  (86)
	sentencia_for : FOR LPAREN . identificador_destino FROM factor error factor RPAREN bloque_sentencias_ejecutables SEMICOLON  (87)
	sentencia_for : FOR LPAREN . identificador_destino FROM factor TO error RPAREN bloque_sentencias_ejecutables SEMICOLON  (88)
	sentencia_for : FOR LPAREN . identificador_destino FROM factor TO factor error bloque_sentencias_ejecutables SEMICOLON  (89)

	error  shift 95
	ID  shift 13
	.  error

	identificador_completo  goto 24
	identificador_destino  goto 96


state 55
	lambda_prefix : LPAREN tipo . ID RPAREN  (130)

	ID  shift 97
	.  error


state 56
	sentencia_for : encabezado_for LBRACE . lista_sentencias_ejecutables RBRACE SEMICOLON  (82)
	lista_sentencias_ejecutables : .  (67)

	.  reduce 67

	lista_sentencias_ejecutables  goto 98


state 57
	identificador_completo : identificador_completo POINT . ID  (23)

	ID  shift 99
	.  error


state 58
	asignacion : identificador_destino ASSIGN_COLON . expresion  (101)

	ID  shift 72
	STRING  shift 73
	INT16  shift 74
	FLOAT32  shift 75
	TOF  shift 76
	.  error

	expresion  goto 100
	termino  goto 78
	factor  goto 79
	conversion_tof  goto 80
	invocacion_funcion  goto 81
	identificador_completo  goto 83


state 59
	declaracion_funcion : inicio_funcion error . LPAREN parametros_formales RPAREN LBRACE lista_sentencias_sin_return sentencia_return lista_sentencias RBRACE  (32)

	LPAREN  shift 101
	.  error


state 60
	declaracion_funcion : inicio_funcion LPAREN . parametros_formales RPAREN LBRACE lista_sentencias_sin_return sentencia_return lista_sentencias RBRACE  (31)
	declaracion_funcion : inicio_funcion LPAREN . error RPAREN LBRACE lista_sentencias_sin_return sentencia_return lista_sentencias RBRACE  (33)
	declaracion_funcion : inicio_funcion LPAREN . parametros_formales RPAREN error lista_sentencias_sin_return sentencia_return lista_sentencias RBRACE  (34)
	declaracion_funcion : inicio_funcion LPAREN . parametros_formales error LBRACE lista_sentencias_sin_return sentencia_return lista_sentencias RBRACE  (36)

	error  shift 102
	ID  shift 103
	CV  shift 104
	CR  shift 105
	INT_KW  shift 20
	FLOAT_KW  shift 21
	.  error

	parametro_formal  goto 106
	tipo  goto 107
	parametros_formales  goto 108
	sem_pasaje  goto 109


state 61
	asignacion : lista_variables_destino ASSIGN . lista_expresiones  (102)

	ID  shift 72
	STRING  shift 73
	INT16  shift 74
	FLOAT32  shift 75
	TOF  shift 76
	.  error

	expresion  goto 87
	termino  goto 78
	factor  goto 79
	conversion_tof  goto 80
	invocacion_funcion  goto 81
	identificador_completo  goto 83
	lista_expresiones  goto 110


state 62
	lista_variables_destino : lista_variables_destino COMMA . identificador_destino  (29)

	ID  shift 13
	.  error

	identificador_completo  goto 24
	identificador_destino  goto 111


state 63
	inicio_funcion : lista_tipos ID .  (30)

	.  reduce 30


state 64
	declaracion_funcion : lista_tipos LPAREN . parametros_formales RPAREN LBRACE lista_sentencias_sin_return sentencia_return lista_sentencias error  (35)

	ID  shift 103
	CV  shift 104
	CR  shift 105
	INT_KW  shift 20
	FLOAT_KW  shift 21
	.  error

	parametro_formal  goto 106
	tipo  goto 107
	parametros_formales  goto 112
	sem_pasaje  goto 109


state 65
	lista_tipos : lista_tipos COMMA . tipo  (38)

	INT_KW  shift 20
	FLOAT_KW  shift 21
	.  error

	tipo  goto 113


state 66
	lista_tipos : lista_tipos tipo .  (39)

	.  reduce 39


state 67
	lambda_expresion : lambda_prefix error . if_simple RBRACE LPAREN lambda_argumento RPAREN  (132)

	IF  shift 114
	.  error

	if_simple  goto 115


state 68
	lambda_expresion : lambda_prefix LBRACE . if_simple RBRACE LPAREN lambda_argumento RPAREN  (131)
	lambda_expresion : lambda_prefix LBRACE . if_simple error LPAREN lambda_argumento RPAREN  (133)
	lambda_expresion : lambda_prefix LBRACE . if_simple RBRACE LPAREN lambda_argumento error  (134)

	IF  shift 114
	.  error

	if_simple  goto 116


state 69
	sentencia_ejecutable : asignacion SEMICOLON .  (54)

	.  reduce 54


state 70
	sentencia_ejecutable : sentencia_print SEMICOLON .  (56)

	.  reduce 56


state 71
	condicion : error . operador_comparacion expresion  (93)

	EQ  shift 117
	NEQ  shift 118
	LT  shift 119
	LE_OP  shift 120
	GT  shift 121
	GE  shift 122
	.  error

	operador_comparacion  goto 123


state 72
	identificador_completo : ID .  (22)
	invocacion_funcion : ID . LPAREN parametros_reales RPAREN  (122)

	LPAREN  shift 124
	error  reduce 22
	ID  reduce 22
	STRING  reduce 22
	INT16  reduce 22
	FLOAT32  reduce 22
	TO  reduce 22
	PLUS  reduce 22
	MINUS  reduce 22
	STAR  reduce 22
	SLASH  reduce 22
	EQ  reduce 22
	NEQ  reduce 22
	LT  reduce 22
	LE_OP  reduce 22
	GT  reduce 22
	GE  reduce 22
	RPAREN  reduce 22
	SEMICOLON  reduce 22
	ARROW  reduce 22
	COMMA  reduce 22
	POINT  reduce 22
	TOF  reduce 22


state 73
	factor : STRING .  (119)

	.  reduce 119


state 74
	factor : INT16 .  (117)

	.  reduce 117


state 75
	factor : FLOAT32 .  (118)

	.  reduce 118


state 76
	conversion_tof : TOF . LPAREN expresion RPAREN  (123)
	conversion_tof : TOF . error expresion RPAREN  (124)
	conversion_tof : TOF . LPAREN expresion error  (125)

	error  shift 125
	LPAREN  shift 126
	.  error


state 77
	condicion : expresion . operador_comparacion expresion  (91)
	condicion : expresion . expresion  (92)
	condicion : expresion . operador_comparacion error  (94)
	expresion : expresion . PLUS termino  (107)
	expresion : expresion . PLUS error  (108)
	expresion : expresion . MINUS termino  (109)
	expresion : expresion . MINUS error  (110)

	ID  shift 72
	STRING  shift 73
	INT16  shift 74
	FLOAT32  shift 75
	PLUS  shift 127
	MINUS  shift 128
	EQ  shift 117
	NEQ  shift 118
	LT  shift 119
	LE_OP  shift 120
	GT  shift 121
	GE  shift 122
	TOF  shift 76
	.  error

	expresion  goto 129
	termino  goto 78
	factor  goto 79
	conversion_tof  goto 80
	invocacion_funcion  goto 81
	identificador_completo  goto 83
	operador_comparacion  goto 130


state 78
	expresion : termino .  (106)
	termino : termino . STAR factor  (112)
	termino : termino . STAR error  (113)
	termino : termino . SLASH factor  (114)
	termino : termino . SLASH error  (115)

	STAR  shift 131
	SLASH  shift 132
	error  reduce 106
	ID  reduce 106
	STRING  reduce 106
	INT16  reduce 106
	FLOAT32  reduce 106
	PLUS  reduce 106
	MINUS  reduce 106
	EQ  reduce 106
	NEQ  reduce 106
	LT  reduce 106
	LE_OP  reduce 106
	GT  reduce 106
	GE  reduce 106
	RPAREN  reduce 106
	SEMICOLON  reduce 106
	ARROW  reduce 106
	COMMA  reduce 106
	TOF  reduce 106


state 79
	termino : factor .  (111)

	.  reduce 111


state 80
	factor : conversion_tof .  (121)

	.  reduce 121


state 81
	factor : invocacion_funcion .  (120)

	.  reduce 120


state 82
	sentencia_if : IF error condicion . RPAREN bloque_sentencias_ejecutables resto_if  (77)

	RPAREN  shift 133
	.  error


state 83
	identificador_completo : identificador_completo . POINT ID  (23)
	factor : identificador_completo .  (116)

	POINT  shift 57
	error  reduce 116
	ID  reduce 116
	STRING  reduce 116
	INT16  reduce 116
	FLOAT32  reduce 116
	TO  reduce 116
	PLUS  reduce 116
	MINUS  reduce 116
	STAR  reduce 116
	SLASH  reduce 116
	EQ  reduce 116
	NEQ  reduce 116
	LT  reduce 116
	LE_OP  reduce 116
	GT  reduce 116
	GE  reduce 116
	RPAREN  reduce 116
	SEMICOLON  reduce 116
	ARROW  reduce 116
	COMMA  reduce 116
	TOF  reduce 116


state 84
	sentencia_if : IF LPAREN condicion . RPAREN $$2 bloque_sentencias_ejecutables resto_if  (76)
	sentencia_if : IF LPAREN condicion . error bloque_sentencias_ejecutables resto_if  (78)
	sentencia_if : IF LPAREN condicion . RPAREN error resto_if  (79)

	error  shift 134
	RPAREN  shift 135
	.  error


state 85
	sentencia_print : PRINT LPAREN error . RPAREN  (66)

	RPAREN  shift 136
	.  error


state 86
	sentencia_print : PRINT LPAREN expresion . RPAREN  (65)
	expresion : expresion . PLUS termino  (107)
	expresion : expresion . PLUS error  (108)
	expresion : expresion . MINUS termino  (109)
	expresion : expresion . MINUS error  (110)

	PLUS  shift 127
	MINUS  shift 128
	RPAREN  shift 137
	.  error


state 87
	lista_expresiones : expresion .  (103)
	expresion : expresion . PLUS termino  (107)
	expresion : expresion . PLUS error  (108)
	expresion : expresion . MINUS termino  (109)
	expresion : expresion . MINUS error  (110)

	PLUS  shift 127
	MINUS  shift 128
	error  reduce 103
	RPAREN  reduce 103
	SEMICOLON  reduce 103
	COMMA  reduce 103


state 88
	sentencia_return : RETURN LPAREN lista_expresiones . RPAREN SEMICOLON  (53)
	lista_expresiones : lista_expresiones . COMMA expresion  (104)
	lista_expresiones : lista_expresiones . error expresion  (105)

	error  shift 138
	RPAREN  shift 139
	COMMA  shift 140
	.  error


state 89
	declaracion_variable : VAR error SEMICOLON .  (21)

	.  reduce 21

